@@ -674,7 +674,7 @@ public class Project implements ResourceFactory {
      * @see #setDefault(String)
      */
     public void setDefaultTarget(String defaultTarget) {
-        this.defaultTarget = defaultTarget;
+        setDefault(defaultTarget);
     }
 
     /**
@@ -694,6 +694,7 @@ public class Project implements ResourceFactory {
      *                      no default target.
      */
     public void setDefault(String defaultTarget) {
+        setUserProperty(MagicNames.PROJECT_DEFAULT_TARGET,  defaultTarget);
         this.defaultTarget = defaultTarget;
     }
 
